<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlueDark"
    tools:context=".comic.view.HqFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgCover"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_220dp"
            android:contentDescription="@string/cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitXY"
            tools:src="@drawable/cover"
            />

        <ImageView
            android:id="@+id/imgHqCover"
            android:layout_width="@dimen/dimen_150dp"
            android:layout_height="@dimen/dimen_220dp"
            tools:src="@drawable/hqs"
            android:background="@color/colorPrimary"
            android:scaleType="fitXY"
            android:padding="@dimen/dimen_5dp"
            android:layout_margin="@dimen/dimen_10dp"
            android:contentDescription="@string/hq"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hqToolbar"
            />

        <TextView
            android:id="@+id/txtTitleHQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgHqCover"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_margin="@dimen/dimen_20ddp"
            tools:text="Werewolf by Night (2020) #2" />

        <TextView
            android:id="@+id/txtDescriptionHQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtTitleHQ"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorPrimary"
            android:layout_marginHorizontal="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_20ddp"
            android:textSize="@dimen/dimen_16sp"
            android:text="@string/night_of_the_creeps_jake_s_attempt_to_get_to_the_bottom_of_his_company_s_questionable_practices_leads_to_an_all_out_monster_brawl_as_werewolf_by_night_gets_in_over_his_head_red_wolf_and_the_law_are_getting_closer_with_jake_s_entire_life_in_chaos_the_only_way_out_may_be_to_fully_embrace_the_secret_history_of_the_werewolf_by_night"
            />

        <TextView
            android:id="@+id/txtPublished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            app:layout_constraintTop_toBottomOf="@id/txtDescriptionHQ"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Published"
            android:textSize="@dimen/dimen_16sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/txtPublishedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            tools:text="April 30, 2014"
            android:textSize="@dimen/dimen_16sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/txtDescriptionHQ"
            app:layout_constraintStart_toEndOf="@id/txtPublished"

            />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_16sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            app:layout_constraintTop_toBottomOf="@id/txtPublished"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtPrice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="$ 5,99"
            android:textSize="@dimen/dimen_16sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            app:layout_constraintTop_toBottomOf="@id/txtPublished"
            app:layout_constraintStart_toEndOf="@id/txtPrice"
            />

        <TextView
            android:id="@+id/txtPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pages"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_16sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            app:layout_constraintTop_toBottomOf="@id/txtPrice"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/txtPage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="38"
            android:textSize="@dimen/dimen_16sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginStart="@dimen/dimen_20ddp"
            app:layout_constraintTop_toBottomOf="@id/txtPrice"
            app:layout_constraintStart_toEndOf="@id/txtPrice"
            />

        <LinearLayout
            android:id="@+id/imgLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/hqToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:padding="@dimen/dimen_10dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/back"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:tint="@color/colorPrimary" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>